--- a/aet.html
+++ b/aet.html
@@ -157,7 +157,7 @@ h3{
             <div class="col col-1" data-label="year">1st Year</div>
             <div class="col col-2" data-label="paper">Paper-II</div>
             <div class="col col-3" data-label="subject">Engineering Drawing and Auto CAD</div>
-            <div class="col col-4" data-label="option">👉<a href="#">View</a> / <a href="AET_1st_year_paper-II.pdf">Download</a></div>
+            <div class="col col-4" data-label="option">👉<a href="#">View</a> / <a href="">Download</a></div>
           </li>
           <li class="table-row">
             <div class="col col-1" data-label="year">1st Year</div>
