--- a/aet.html
+++ b/aet.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="icon" type="image/x-icon" href="Mypic.jpg">
 <title>Automobile Engineering Technician</title>
     <style>
@@ -141,43 +142,43 @@ h3{
         <h2>AUTOMOBILE ENGINEERING TECHNICIAN <br><small>Record Notes</small></h2>
         
         <ul class="responsive-table">
-          <li class="table-header">
+          <li class="table-header animated-div animate__animated animate__slideInRight">
             <div class="col col-1"><h3>year</h3></div>
             <div class="col col-2"><h3>Paper</h3></div>
             <div class="col col-3"><h3>Subject Name</h3></div>
             <div class="col col-4"><h3>Files</h3></div>
           </li>
-          <li class="table-row">
+          <li class="table-row animated-div animate__animated animate__slideInRight">
             <div class="col col-1" data-label="year">1st Year</div>
             <div class="col col-2" data-label="paper">Paper-I</div>
             <div class="col col-3" data-label="subject">Workshop Practice</div>
             <div class="col col-4" data-label="option">👉<a href="AET_1st_year_paper-I.html">View</a> / <a href="AET_1st_year_paper-I.pdf">Download</a></div>
           </li>
-          <li class="table-row">
+          <li class="table-row animated-div animate__animated animate__slideInRight">
             <div class="col col-1" data-label="year">1st Year</div>
             <div class="col col-2" data-label="paper">Paper-II</div>
             <div class="col col-3" data-label="subject">Engineering Drawing and Auto CAD</div>
             <div class="col col-4" data-label="option">👉<a href="#">View / Download</a></div>
           </li>
-          <li class="table-row">
+          <li class="table-row animated-div animate__animated animate__slideInRight">
             <div class="col col-1" data-label="year">1st Year</div>
             <div class="col col-2" data-label="paper">Paper-III</div>
             <div class="col col-3" data-label="subject">Automobile Engine Lab</div>
             <div class="col col-4" data-label="option">👉<a href="AET_1st_year_paper-III.html">View</a> / <a href="AET_1st_year_paper-III.pdf">Download</a></div>
           </li>
-          <li class="table-row">
+          <li class="table-row animated-div animate__animated animate__slideInRight">
             <div class="col col-1" data-label="year">2nd Year</div>
             <div class="col col-2" data-label="paper">Paper-I</div>
             <div class="col col-3" data-label="subject">Auto Transmission and Electrical System Lab</div>
             <div class="col col-4" data-label="option">👉<a href="AET_2nd_year_paper-I.html">View</a> / <a href="AET_2nd_year_paper-I.pdf">Download</a></div>
           </li>
-          <li class="table-row">
+          <li class="table-row animated-div animate__animated animate__slideInRight">
             <div class="col col-1" data-label="year">2nd Year</div>
             <div class="col col-2" data-label="paper">Paper-II</div>
             <div class="col col-3" data-label="subject">Auto Chassis and Body Engineering Lab</div>
             <div class="col col-4" data-label="option">👉<a href="AET_2nd_year_paper-II.html">View</a> / <a href="AET_2nd_year_paper-II.pdf">Download</a></div>
           </li>
-          <li class="table-row">
+          <li class="table-row animated-div animate__animated animate__slideInRight">
             <div class="col col-1" data-label="year">2nd Year</div>
             <div class="col col-2" data-label="paper">Paper-III</div>
             <div class="col col-3" data-label="subject">Auto Servicing and Maintenance Lab</div>
