--- a/aet.html
+++ b/aet.html
@@ -142,13 +142,13 @@ h3{
         <h2>AUTOMOBILE ENGINEERING TECHNICIAN <br><small>Record Notes</small></h2>
         
         <ul class="responsive-table">
-          <li class="table-header animated-div animate__animated animate__slideInRight">
+          <li class="table-header">
             <div class="col col-1"><h3>year</h3></div>
             <div class="col col-2"><h3>Paper</h3></div>
             <div class="col col-3"><h3>Subject Name</h3></div>
             <div class="col col-4"><h3>Files</h3></div>
           </li>
-          <li class="table-row animated-div animate__animated animate__slideInRight">
+          <li class="table-row animated-div animate__animated animate__slideInLeft">
             <div class="col col-1" data-label="year">1st Year</div>
             <div class="col col-2" data-label="paper">Paper-I</div>
             <div class="col col-3" data-label="subject">Workshop Practice</div>
@@ -160,7 +160,7 @@ h3{
             <div class="col col-3" data-label="subject">Engineering Drawing and Auto CAD</div>
             <div class="col col-4" data-label="option">👉<a href="#">View / Download</a></div>
           </li>
-          <li class="table-row animated-div animate__animated animate__slideInRight">
+          <li class="table-row animated-div animate__animated animate__slideInLeft">
             <div class="col col-1" data-label="year">1st Year</div>
             <div class="col col-2" data-label="paper">Paper-III</div>
             <div class="col col-3" data-label="subject">Automobile Engine Lab</div>
@@ -172,7 +172,7 @@ h3{
             <div class="col col-3" data-label="subject">Auto Transmission and Electrical System Lab</div>
             <div class="col col-4" data-label="option">👉<a href="AET_2nd_year_paper-I.html">View</a> / <a href="AET_2nd_year_paper-I.pdf">Download</a></div>
           </li>
-          <li class="table-row animated-div animate__animated animate__slideInRight">
+          <li class="table-row animated-div animate__animated animate__slideInLeft">
             <div class="col col-1" data-label="year">2nd Year</div>
             <div class="col col-2" data-label="paper">Paper-II</div>
             <div class="col col-3" data-label="subject">Auto Chassis and Body Engineering Lab</div>
