--- a/aet.html
+++ b/aet.html
@@ -9,6 +9,8 @@
     <style>
         body {
   font-family: 'lato', sans-serif;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 .container {
   max-width: 1000px;
