--- a/aet.html
+++ b/aet.html
@@ -10,7 +10,7 @@
         body {
   font-family: 'lato', sans-serif;
     max-width: 100%;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
 }
 .container {
   max-width: 1000px;
