--- a/aet.html
+++ b/aet.html
@@ -68,7 +68,10 @@ h3{
   }
   
   @media all and (max-width: 767px) {
-    
+    body {
+   max-width: 100%;
+    overflow-x: hidden;
+}
     .table-header {
       display: none;
     }
