--- a/aet.html
+++ b/aet.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="Mypic.jpg">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 <title>Automobile Engineering Technician</title>
     <style>
         body {
@@ -68,10 +67,7 @@ h3{
   }
   
   @media all and (max-width: 767px) {
-    body {
-   max-width: 100%;
-    overflow-x: hidden;
-}
+    
     .table-header {
       display: none;
     }
@@ -151,37 +147,37 @@ h3{
             <div class="col col-3"><h3>Subject Name</h3></div>
             <div class="col col-4"><h3>Files</h3></div>
           </li>
-          <li class="table-row animated-div animate__animated animate__slideInLeft">
+          <li class="table-row">
             <div class="col col-1" data-label="year">1st Year</div>
             <div class="col col-2" data-label="paper">Paper-I</div>
             <div class="col col-3" data-label="subject">Workshop Practice</div>
             <div class="col col-4" data-label="option">👉<a href="AET_1st_year_paper-I.html">View</a> / <a href="AET_1st_year_paper-I.pdf">Download</a></div>
           </li>
-          <li class="table-row animated-div animate__animated animate__slideInRight">
+          <li class="table-row">
             <div class="col col-1" data-label="year">1st Year</div>
             <div class="col col-2" data-label="paper">Paper-II</div>
             <div class="col col-3" data-label="subject">Engineering Drawing and Auto CAD</div>
             <div class="col col-4" data-label="option">👉<a href="#">View</a> / <a href="AET_1st_year_paper-II.pdf">Download</a></div>
           </li>
-          <li class="table-row animated-div animate__animated animate__slideInLeft">
+          <li class="table-row">
             <div class="col col-1" data-label="year">1st Year</div>
             <div class="col col-2" data-label="paper">Paper-III</div>
             <div class="col col-3" data-label="subject">Automobile Engine Lab</div>
             <div class="col col-4" data-label="option">👉<a href="AET_1st_year_paper-III.html">View</a> / <a href="AET_1st_year_paper-III.pdf">Download</a></div>
           </li>
-          <li class="table-row animated-div animate__animated animate__slideInRight">
+          <li class="table-row">
             <div class="col col-1" data-label="year">2nd Year</div>
             <div class="col col-2" data-label="paper">Paper-I</div>
             <div class="col col-3" data-label="subject">Auto Transmission and Electrical System Lab</div>
             <div class="col col-4" data-label="option">👉<a href="AET_2nd_year_paper-I.html">View</a> / <a href="AET_2nd_year_paper-I.pdf">Download</a></div>
           </li>
-          <li class="table-row animated-div animate__animated animate__slideInLeft">
+          <li class="table-row">
             <div class="col col-1" data-label="year">2nd Year</div>
             <div class="col col-2" data-label="paper">Paper-II</div>
             <div class="col col-3" data-label="subject">Auto Chassis and Body Engineering Lab</div>
             <div class="col col-4" data-label="option">👉<a href="AET_2nd_year_paper-II.html">View</a> / <a href="AET_2nd_year_paper-II.pdf">Download</a></div>
           </li>
-          <li class="table-row animated-div animate__animated animate__slideInRight">
+          <li class="table-row">
             <div class="col col-1" data-label="year">2nd Year</div>
             <div class="col col-2" data-label="paper">Paper-III</div>
             <div class="col col-3" data-label="subject">Auto Servicing and Maintenance Lab</div>
