--- a/aet.html
+++ b/aet.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="Mypic.jpg">
-<title>Automobile Engineering Technician</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <title>Automobile Engineering Technician</title>
     <style>
+      html, body {
+    overflow-x: hidden;
+}
+
         body {
   font-family: 'lato', sans-serif;
 }
@@ -147,46 +152,51 @@ h3{
             <div class="col col-3"><h3>Subject Name</h3></div>
             <div class="col col-4"><h3>Files</h3></div>
           </li>
-          <li class="table-row">
+          <li class="table-row" data-aos="fade-right">
             <div class="col col-1" data-label="year">1st Year</div>
             <div class="col col-2" data-label="paper">Paper-I</div>
             <div class="col col-3" data-label="subject">Workshop Practice</div>
-            <div class="col col-4" data-label="option">👉<a href="AET_1st_year_paper-I.html">View</a> / <a href="AET_1st_year_paper-I.pdf">Download</a></div>
+            <div class="col col-4" data-label="option">👉<a href="AET_1st_year_paper-I.html">View</a>&nbsp;/&nbsp;<a href="AET_1st_year_paper-I.pdf">Download</a></div>
           </li>
-          <li class="table-row">
+          <li class="table-row" data-aos="fade-left">
             <div class="col col-1" data-label="year">1st Year</div>
             <div class="col col-2" data-label="paper">Paper-II</div>
             <div class="col col-3" data-label="subject">Engineering Drawing and Auto CAD</div>
-            <div class="col col-4" data-label="option">👉<a href="#">View</a> / <a href="AET_1st_year_paper-II.pdf">Download</a></div>
+            <div class="col col-4" data-label="option">👉<a href="#">View</a>&nbsp;/&nbsp;<a href="AET_1st_year_paper-II.pdf">Download</a></div>
           </li>
-          <li class="table-row">
+          <li class="table-row" data-aos="fade-right">
             <div class="col col-1" data-label="year">1st Year</div>
             <div class="col col-2" data-label="paper">Paper-III</div>
             <div class="col col-3" data-label="subject">Automobile Engine Lab</div>
-            <div class="col col-4" data-label="option">👉<a href="AET_1st_year_paper-III.html">View</a> / <a href="AET_1st_year_paper-III.pdf">Download</a></div>
+            <div class="col col-4" data-label="option">👉<a href="AET_1st_year_paper-III.html">View</a>&nbsp;/&nbsp;<a href="AET_1st_year_paper-III.pdf">Download</a></div>
           </li>
-          <li class="table-row">
+          <li class="table-row" data-aos="fade-left">
             <div class="col col-1" data-label="year">2nd Year</div>
             <div class="col col-2" data-label="paper">Paper-I</div>
             <div class="col col-3" data-label="subject">Auto Transmission and Electrical System Lab</div>
-            <div class="col col-4" data-label="option">👉<a href="AET_2nd_year_paper-I.html">View</a> / <a href="AET_2nd_year_paper-I.pdf">Download</a></div>
+            <div class="col col-4" data-label="option">👉<a href="AET_2nd_year_paper-I.html">View</a>&nbsp;/&nbsp;<a href="AET_2nd_year_paper-I.pdf">Download</a></div>
           </li>
-          <li class="table-row">
+          <li class="table-row" data-aos="fade-right">
             <div class="col col-1" data-label="year">2nd Year</div>
             <div class="col col-2" data-label="paper">Paper-II</div>
             <div class="col col-3" data-label="subject">Auto Chassis and Body Engineering Lab</div>
-            <div class="col col-4" data-label="option">👉<a href="AET_2nd_year_paper-II.html">View</a> / <a href="AET_2nd_year_paper-II.pdf">Download</a></div>
+            <div class="col col-4" data-label="option">👉<a href="AET_2nd_year_paper-II.html">View</a>&nbsp;/&nbsp;<a href="AET_2nd_year_paper-II.pdf">Download</a></div>
           </li>
-          <li class="table-row">
+          <li class="table-row" data-aos="fade-left">
             <div class="col col-1" data-label="year">2nd Year</div>
             <div class="col col-2" data-label="paper">Paper-III</div>
             <div class="col col-3" data-label="subject">Auto Servicing and Maintenance Lab</div>
-            <div class="col col-4" data-label="option">👉<a href="AET_2nd_year_pIaper-III.html">View</a> / <a href="AET_2nd_year_paper-III.pdf">Download</a></div>
+            <div class="col col-4" data-label="option">👉<a href="AET_2nd_year_pIaper-III.html">View</a>&nbsp;/&nbsp;<a href="AET_2nd_year_paper-III.pdf">Download</a></div>
           </li>
         </ul>
       </div>
       
       <div class="footer__bottom">Copyright © <a href="https://aryasrikanth73.github.io/srikantharya/resume.html">Srikanth Arya</a>. All rights reserved.</div>
-      
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init({
+        duration: 1000,
+    });
+  </script>
   </body>
 </html>
